--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,20 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!-- Name Column -->
     <ng-container matColumnDef="taskName">
         <th mat-header-cell *matHeaderCellDef> Task name </th>
         <td mat-cell *matCellDef="let element"> {{element.taskName}} </td>
     </ng-container>
 
-    <!-- Weight Column -->
     <ng-container matColumnDef="priority">
         <th mat-header-cell *matHeaderCellDef> Priority </th>
         <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
     </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="done">
         <th mat-header-cell *matHeaderCellDef> Done </th>
-        <td mat-cell *matCellDef="let element"> {{element.done}} </td>
+        <td mat-cell *matCellDef="let element">
+            <mat-checkbox [(ngModel)]="checked"></mat-checkbox>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
