--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,15 +1,31 @@
-<div class="example-container">
-    <mat-form-field appearance="fill">
-        <mat-label>Input</mat-label>
-        <input matInput>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Select</mat-label>
-        <mat-select>
-            <mat-option value="high">High</mat-option>
-            <mat-option value="medium">Medium</mat-option>
-            <mat-option value="low">Low</mat-option>
-        </mat-select>
-    </mat-form-field>
-    <br>
-</div>
+<form (ngSubmit)="onSubmit(f)" #f="ngForm">
+    <div class="row">
+        <div class="col-sm-5 form-group">
+            <label for="name">Task name</label>
+            <input
+                    type="text"
+                    id="name"
+                    class="form-control"
+                    name="name"
+                    ngModel
+                    required
+            >
+        </div>
+        <div class="col-sm-2 form-group">
+            <label for="priority">Priority</label>
+            <select name="priority" id="priority" class="form-control" [ngModel]="defoultPriority">
+                <option value="high">High</option>
+                <option value="medium">Medium</option>
+                <option value="low">Low</option>
+            </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <button
+                    class="btn btn-success"
+                    type="submit"
+                    [disabled]="!f.valid">Add</button>
+        </div>
+    </div>
+</form>
