--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -1,3 +1,15 @@
 table {
     width: 100%;
 }
+
+tr.example-element-row:not(.example-expanded-row):hover {
+    background: whitesmoke;
+}
+
+tr.example-element-row:not(.example-expanded-row):active {
+    background: #efefef;
+}
+
+.example-element-row td {
+    border-bottom-width: 0;
+}
