--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,25 +1,66 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<!--<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">-->
 
-    <ng-container matColumnDef="taskName">
-        <th mat-header-cell *matHeaderCellDef> Task name </th>
-        <td mat-cell *matCellDef="let element"> {{element.taskName}} </td>
-    </ng-container>
+    <!--<ng-container matColumnDef="taskName">-->
+        <!--<th mat-header-cell *matHeaderCellDef> Task name </th>-->
+        <!--<td mat-cell *matCellDef="let element"> {{element.taskName}} </td>-->
+    <!--</ng-container>-->
 
-    <ng-container matColumnDef="priority">
-        <th mat-header-cell *matHeaderCellDef> Priority </th>
-        <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
-    </ng-container>
+    <!--<ng-container matColumnDef="priority">-->
+        <!--<th mat-header-cell *matHeaderCellDef> Priority </th>-->
+        <!--<td mat-cell *matCellDef="let element"> {{element.priority}} </td>-->
+    <!--</ng-container>-->
 
-    <ng-container matColumnDef="done">
-        <th mat-header-cell *matHeaderCellDef> Done </th>
-        <td mat-cell *matCellDef="let element">
-            <mat-checkbox [(ngModel)]="checked"></mat-checkbox>
-        </td>
-    </ng-container>
+    <!--<ng-container matColumnDef="done">-->
+        <!--<th mat-header-cell *matHeaderCellDef> Done </th>-->
+        <!--<td mat-cell *matCellDef="let element">-->
+            <!--<mat-checkbox [(ngModel)]="checked"></mat-checkbox>-->
+        <!--</td>-->
+    <!--</ng-container>-->
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <!--<ng-container matColumnDef="delete">-->
+        <!--<th mat-header-cell *matHeaderCellDef></th>-->
+        <!--<td mat-cell *matCellDef="let element">-->
+            <!--<div class="example-button-container">-->
+                <!--<button mat-fab color="primary" aria-label="Example icon button with a delete icon" *ngIf="isDisplay">-->
+                    <!--<mat-icon>delete</mat-icon>-->
+                <!--</button>-->
+            <!--</div>-->
+        <!--</td>-->
+    <!--</ng-container>-->
 
+    <!--<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
+    <!--<tr mat-row *matRowDef="let row; columns: displayedColumns;"-->
+        <!--(mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()"-->
+        <!--class="example-element-row"-->
+    <!--&gt;</tr>-->
+
+<!--</table>-->
+
+<!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>-->
+
+<hr>
+<button class="btn btn-success">btn</button>
+
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Task name</th>
+        <th scope="col">Priority</th>
+        <th scope="col">Done</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr *ngFor="let task of arrayOfTasks; let i = index">
+
+        <app-table-row [task]="task">
+
+        </app-table-row>
+        <!--<th scope="row">{{task.taskName}}</th>-->
+        <!--<td>{{task.priority}}</td>-->
+        <!--<td>-->
+            <!--<input type="checkbox" class="form-check-input" id="exampleCheck1">-->
+        <!--</td>-->
+        <!--<td>{{task.delete}}</td>-->
+    </tr>
+    </tbody>
 </table>
-
-<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
