--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -14,9 +14,9 @@
         <div class="col-sm-2 form-group">
             <label for="priority">Priority</label>
             <select name="priority" id="priority" class="form-control" [ngModel]="defoultPriority">
-                <option value="high">High</option>
-                <option value="medium">Medium</option>
-                <option value="low">Low</option>
+                <option value="High">High</option>
+                <option value="Medium">Medium</option>
+                <option value="Low">Low</option>
             </select>
         </div>
     </div>
