--- a/src/app/table/table-row/table-row.component.html
+++ b/src/app/table/table-row/table-row.component.html
@@ -5,6 +5,6 @@
         <td>
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
         </td>
-        <button class="btn btn-default">Delete</button>
+        <button class="btn btn-default" (click)="onDelete(index)">Delete</button>
     </tbody>
 </table>
