--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -59,7 +59,7 @@
         <!--<td>-->
             <!--<input type="checkbox" class="form-check-input" id="exampleCheck1">-->
         <!--</td>-->
-        <!--<td>{{task.delete}}</td>-->
+        <!--<td><button class="btn btn-success" (click)="onDelete(i)" *ngIf="isDisplay">Usun znowu</button></td>-->
     </tr>
     </tbody>
 </table>
