adding simple sorting

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -40,10 +40,12 @@
 
 <hr>
 
+<button class="btn-success btn" (click)="onSort()">sortuj</button>
+
 <table class="table">
     <thead>
     <tr>
-        <th scope="col">Task name</th>
+        <th scope="col" role="columnheader button">Task name</th>
         <th scope="col">Priority</th>
         <th scope="col">Done</th>
     </tr>
