--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,67 +1,68 @@
-<!--<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">-->
+<!--<button class="btn-success btn" (click)="onSort()">sortuj</button>-->
 
-    <!--<ng-container matColumnDef="taskName">-->
-        <!--<th mat-header-cell *matHeaderCellDef> Task name </th>-->
-        <!--<td mat-cell *matCellDef="let element"> {{element.taskName}} </td>-->
-    <!--</ng-container>-->
+<!--<table class="table">-->
+    <!--<thead>-->
+    <!--<tr>-->
+        <!--<th scope="col" role="columnheader button">Task name</th>-->
+        <!--<th scope="col">Priority</th>-->
+        <!--<th scope="col">Done</th>-->
+    <!--</tr>-->
+    <!--</thead>-->
+    <!--<tbody>-->
+    <!--<tr *ngFor="let task of arrayOfTasks; let i = index">-->
 
-    <!--<ng-container matColumnDef="priority">-->
-        <!--<th mat-header-cell *matHeaderCellDef> Priority </th>-->
-        <!--<td mat-cell *matCellDef="let element"> {{element.priority}} </td>-->
-    <!--</ng-container>-->
+        <!--<app-table-row [task]="task" [index]="i">-->
 
-    <!--<ng-container matColumnDef="done">-->
-        <!--<th mat-header-cell *matHeaderCellDef> Done </th>-->
-        <!--<td mat-cell *matCellDef="let element">-->
-            <!--<mat-checkbox [(ngModel)]="checked"></mat-checkbox>-->
-        <!--</td>-->
-    <!--</ng-container>-->
-
-    <!--<ng-container matColumnDef="delete">-->
-        <!--<th mat-header-cell *matHeaderCellDef></th>-->
-        <!--<td mat-cell *matCellDef="let element">-->
-            <!--<div class="example-button-container">-->
-                <!--<button mat-fab color="primary" aria-label="Example icon button with a delete icon" *ngIf="isDisplay">-->
-                    <!--<mat-icon>delete</mat-icon>-->
-                <!--</button>-->
-            <!--</div>-->
-        <!--</td>-->
-    <!--</ng-container>-->
-
-    <!--<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>-->
-    <!--<tr mat-row *matRowDef="let row; columns: displayedColumns;"-->
-        <!--(mouseenter)="mouseEnter()" (mouseleave)="mouseLeave()"-->
-        <!--class="example-element-row"-->
-    <!--&gt;</tr>-->
-
+        <!--</app-table-row>-->
+        <!--&lt;!&ndash;<th scope="row">{{task.taskName}}</th>&ndash;&gt;-->
+        <!--&lt;!&ndash;<td>{{task.priority}}</td>&ndash;&gt;-->
+        <!--&lt;!&ndash;<td>&ndash;&gt;-->
+            <!--&lt;!&ndash;<input type="checkbox" class="form-check-input" id="exampleCheck1">&ndash;&gt;-->
+        <!--&lt;!&ndash;</td>&ndash;&gt;-->
+        <!--&lt;!&ndash;<td><button class="btn btn-success" (click)="onDelete(i)" *ngIf="isDisplay">Usun znowu</button></td>&ndash;&gt;-->
+    <!--</tr>-->
+    <!--</tbody>-->
 <!--</table>-->
 
-<!--<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>-->
 
 <hr>
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-<button class="btn-success btn" (click)="onSort()">sortuj</button>
+    <!-- Name Column -->
+    <ng-container matColumnDef="taskName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Task name </th>
+        <td mat-cell *matCellDef="let element"> {{element.taskName}} </td>
+    </ng-container>
 
-<table class="table">
-    <thead>
-    <tr>
-        <th scope="col" role="columnheader button">Task name</th>
-        <th scope="col">Priority</th>
-        <th scope="col">Done</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let task of arrayOfTasks; let i = index">
+    <!-- Weight Column -->
+    <ng-container matColumnDef="priority">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Priority </th>
+        <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+    </ng-container>
 
-        <app-table-row [task]="task" [index]="i">
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="done">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Done </th>
+        <td mat-cell *matCellDef="let element">
+            <mat-checkbox class="example-margin">Done!</mat-checkbox>
+        </td>
+    </ng-container>
 
-        </app-table-row>
-        <!--<th scope="row">{{task.taskName}}</th>-->
-        <!--<td>{{task.priority}}</td>-->
-        <!--<td>-->
-            <!--<input type="checkbox" class="form-check-input" id="exampleCheck1">-->
-        <!--</td>-->
-        <!--<td><button class="btn btn-success" (click)="onDelete(i)" *ngIf="isDisplay">Usun znowu</button></td>-->
-    </tr>
-    </tbody>
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+        <td mat-cell *matCellDef="let element">
+            <button class="btn btn-default" *ngIf="isHoverOn(element)" (click)="onDelete(element.id)">Delete</button>
+        </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row
+        *matRowDef="let row;
+        columns: displayedColumns;"
+        class="example-element-row"
+        (mouseenter)="mouseEnter(row)"
+        (mouseleave)="mouseLeave(row)"></tr>
 </table>
+
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
