--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -4,13 +4,18 @@
         <td>
             <mat-form-field appearance="fill" class="example-full-width">
                 <mat-label>Task name</mat-label>
-                <input id="name" name="name" ngModel matInput>
+                <input
+                        id="name"
+                        name="name"
+                        required
+                        ngModel
+                        matInput>
             </mat-form-field>
         </td>
         <td>
             <mat-form-field appearance="fill" class="example-full-width">
                 <mat-label>Priority</mat-label>
-                <mat-select name="priority" id="priority" [ngModel]="defoultPriority">
+                <mat-select name="priority" id="priority" [ngModel]="selected" [(value)]="selected" required>
                     <mat-option value="High">High</mat-option>
                     <mat-option value="Medium">Medium</mat-option>
                     <mat-option value="Low">Low</mat-option>
@@ -21,10 +26,10 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <button
-                    class="btn btn-success"
+            <button mat-raised-button
+                    color="primary"
                     type="submit"
-                    [disabled]="!f.valid">Adddd</button>
+                    [disabled]="!f.valid">Add</button>
         </div>
     </div>
 </form>
