--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -17,3 +17,24 @@ tr.example-element-row:not(.example-expanded-row):active {
 .mat-sort-header-container {
     align-items: center;
 }
+
+
+.custom-btn {
+    width: 38px;
+    height: 38px;
+    line-height: 14px;
+    font-size: 14px;
+}
+.custom-btn::ng-deep .mat-button-wrapper {
+    line-height: 14px;
+    padding: 0;
+}
+.custom-btn::ng-deep .mat-button-wrapper .mat-icon {
+    font-size: 14px;
+    padding-right: 4px;
+    padding-top: 4px;
+}
+
+.mat-column-delete {
+    width: 10% !important;
+}
