--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -42,17 +42,25 @@
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="done">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Done </th>
+        <th mat-header-cell *matHeaderCellDef> Done </th>
         <td mat-cell *matCellDef="let element">
-            <mat-checkbox class="example-margin">Done!</mat-checkbox>
+            <mat-checkbox class="example-margin"></mat-checkbox>
         </td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+        <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element">
-            <button class="btn btn-default" *ngIf="isHoverOn(element)" (click)="onDelete(element.id)">Delete</button>
+            <button
+                    class="custom-btn"
+                    mat-fab
+                    color="primary"
+                    *ngIf="isHoverOn(element)"
+                    (click)="onDelete(element.id)"
+                    aria-label="Example icon button with a delete icon">
+                <mat-icon>delete</mat-icon>
+            </button>
         </td>
     </ng-container>
 
