styling the application

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -11,3 +11,19 @@
 td {
     padding-right: 8px;
 }
+
+.mat-raised-button {
+    background-color: #c76701;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+
+/* Change label color on focused */
+::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
+    color: #c76701 !important;
+}
+
+/* underline border color on focused */
+::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
+    background-color: #c76701 !important;
+}
