--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -26,6 +26,7 @@
 
 
 <hr>
+<h4>Your Tasks</h4>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!-- Name Column -->
