--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container">
     <div class="row">
+        <h1>To Do List</h1>
+        <hr>
         <app-form></app-form>
         <app-table></app-table>
     </div>
