--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,3 +1,4 @@
+<h4>Add a new task</h4>
 <form class="example-form" (ngSubmit)="onSubmit(f)" #f="ngForm">
     <table class="example-full-width" cellspacing="0">
         <tr>
@@ -22,19 +23,17 @@
                     </mat-select>
                 </mat-form-field>
             </td>
-            <td>
-                <button mat-raised-button
-                        color="primary"
-                        type="submit"
-                        [disabled]="!f.valid">Add
-                </button>
-            </td>
         </tr>
     </table>
+
+    <div>
+        <button mat-raised-button
+                color="primary"
+                type="submit"
+                [disabled]="!f.valid">Add
+        </button>
+    </div>
 </form>
-
-
-<hr>
 
 
 <!--<form >-->
