--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -18,21 +18,43 @@ tr.example-element-row:not(.example-expanded-row):active {
     align-items: center;
 }
 
+.mat-header-cell {
+    font-size: 15px;
+    font-weight: lighter;
+    color: #ffffff;
+    background-color: #59411b;
+}
+
+::ng-deep .mat-sort-header-arrow {
+    color: #fff;
+}
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-ripple .mat-ripple-element {
+    opacity: 0.03 !important;
+    background-color: #c76701!important;
+}
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background,.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+    background-color: #c76701;
+}
+
+
 
 .custom-btn {
     width: 38px;
     height: 38px;
     line-height: 14px;
-    font-size: 14px;
+    font-size: 25px;
+    background-color: #c76701;
 }
 .custom-btn::ng-deep .mat-button-wrapper {
     line-height: 14px;
     padding: 0;
 }
 .custom-btn::ng-deep .mat-button-wrapper .mat-icon {
-    font-size: 14px;
+    font-size: 23px;
     padding-right: 4px;
-    padding-top: 4px;
+    padding-top: 1px;
 }
 
 .mat-column-delete {
