--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -14,12 +14,12 @@
                 </mat-form-field>
             </td>
             <td>
-                <mat-form-field appearance="fill" class="example-full-width">
+                <mat-form-field appearance="fill">
                     <mat-label>Priority</mat-label>
-                    <mat-select name="priority" id="priority" [ngModel]="selected" [(value)]="selected" required>
-                        <mat-option value="High">High</mat-option>
-                        <mat-option value="Medium">Medium</mat-option>
-                        <mat-option value="Low">Low</mat-option>
+                    <mat-select name="priority" id="priority" [ngModel]="priority" required>
+                        <mat-option value=3>{{priorityName(3)}}</mat-option>
+                        <mat-option value=2>{{priorityName(2)}}</mat-option>
+                        <mat-option value=1>{{priorityName(1)}}</mat-option>
                     </mat-select>
                 </mat-form-field>
             </td>
