--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -43,7 +43,7 @@
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="done">
-        <th mat-header-cell *matHeaderCellDef> Done </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Done </th>
         <td mat-cell *matCellDef="let element">
             <mat-checkbox class="example-margin"></mat-checkbox>
         </td>
