--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -26,7 +26,7 @@
 
 
 <hr>
-<h4>Your Tasks</h4>
+
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <!-- Name Column -->
@@ -38,14 +38,14 @@
     <!-- Weight Column -->
     <ng-container matColumnDef="priority">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Priority </th>
-        <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+        <td mat-cell *matCellDef="let element">{{priorityName(element.priority)}}</td>
     </ng-container>
 
     <!-- Symbol Column -->
     <ng-container matColumnDef="done">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Done </th>
+        <th mat-header-cell *matHeaderCellDef> Done </th>
         <td mat-cell *matCellDef="let element">
-            <mat-checkbox class="example-margin"></mat-checkbox>
+            <mat-checkbox class="example-margin" [checked]="element.done" (change)="checkboxChange(element)"></mat-checkbox>
         </td>
     </ng-container>
 
@@ -65,13 +65,13 @@
         </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumnsKeys"></tr>
     <tr mat-row
         *matRowDef="let row;
-        columns: displayedColumns;"
+        columns: displayedColumnsKeys;"
         class="example-element-row"
         (mouseenter)="mouseEnter(row)"
-        (mouseleave)="mouseLeave(row)"></tr>
+        (mouseleave)="mouseLeave()"></tr>
 </table>
 
 <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
