adding styling to form component

--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -4,12 +4,8 @@
     width: 100%;
 }
 
-.example-full-width {
-    width: 100%;
-}
-
-td {
-    padding-right: 8px;
+.example-container .mat-form-field + .mat-form-field {
+    margin-left: 8px;
 }
 
 .mat-raised-button {
@@ -18,12 +14,10 @@ td {
     letter-spacing: 1px;
 }
 
-/* Change label color on focused */
 ::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
     color: #c76701 !important;
 }
 
-/* underline border color on focused */
 ::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
     background-color: #c76701 !important;
 }
