--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,57 +1,27 @@
-<!--<button class="btn-success btn" (click)="onSort()">sortuj</button>-->
-
-<!--<table class="table">-->
-    <!--<thead>-->
-    <!--<tr>-->
-        <!--<th scope="col" role="columnheader button">Task name</th>-->
-        <!--<th scope="col">Priority</th>-->
-        <!--<th scope="col">Done</th>-->
-    <!--</tr>-->
-    <!--</thead>-->
-    <!--<tbody>-->
-    <!--<tr *ngFor="let task of arrayOfTasks; let i = index">-->
-
-        <!--<app-table-row [task]="task" [index]="i">-->
-
-        <!--</app-table-row>-->
-        <!--&lt;!&ndash;<th scope="row">{{task.taskName}}</th>&ndash;&gt;-->
-        <!--&lt;!&ndash;<td>{{task.priority}}</td>&ndash;&gt;-->
-        <!--&lt;!&ndash;<td>&ndash;&gt;-->
-            <!--&lt;!&ndash;<input type="checkbox" class="form-check-input" id="exampleCheck1">&ndash;&gt;-->
-        <!--&lt;!&ndash;</td>&ndash;&gt;-->
-        <!--&lt;!&ndash;<td><button class="btn btn-success" (click)="onDelete(i)" *ngIf="isDisplay">Usun znowu</button></td>&ndash;&gt;-->
-    <!--</tr>-->
-    <!--</tbody>-->
-<!--</table>-->
-
-
 <hr>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-    <!-- Name Column -->
     <ng-container matColumnDef="taskName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Task name </th>
-        <td mat-cell *matCellDef="let element"> {{element.taskName}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Task name</th>
+        <td mat-cell *matCellDef="let element"> {{element.taskName}}</td>
     </ng-container>
 
-    <!-- Weight Column -->
     <ng-container matColumnDef="priority">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Priority </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Priority</th>
         <td mat-cell *matCellDef="let element">{{priorityName(element.priority)}}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="done">
-        <th mat-header-cell *matHeaderCellDef> Done </th>
+        <th mat-header-cell *matHeaderCellDef> Done</th>
         <td mat-cell *matCellDef="let element">
-            <mat-checkbox class="example-margin" [checked]="element.done" (change)="checkboxChange(element)"></mat-checkbox>
+            <mat-checkbox class="example-margin" [checked]="element.done"
+                          (change)="checkboxChange(element)"></mat-checkbox>
         </td>
     </ng-container>
 
-    <!-- Symbol Column -->
     <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef> </th>
+        <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
             <button
                     class="custom-btn"
